fix grid overflow pb

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,5 @@
+$color_top : #2f3640;
+
 html {
   scroll-behavior: smooth;
 }
@@ -9,19 +11,29 @@ body {
   background-color: #000;
 }
 
-h1 {
+h2 {
   color: #fff;
   text-align: center;
 }
 
-#conteneur{
-  position: relative;
+#logo {
+  padding: 20px;
 }
+
+#tops {
+  display: grid;
+  width: 100%;
+  background-color: $color_top;
+  padding: 20px;
+}
+
 
 .wrapper {
   display: grid;
   grid-template-columns:  1fr 900px 1fr;
   scroll-behavior: smooth;
+  overflow: hidden;
+  min-width: 0; /* fix grid overflow pb */
 
 
   #section {
@@ -32,12 +44,11 @@ h1 {
     grid-column-gap: 20px; 
     margin: 20px;
     overflow: hidden;
+    min-width: 0;  /* fix grid overflow pb */
     padding-left: 10px; 
 
     .item {
-      // padding: 5px;
       transition: 300ms all;
-      overflow: hidden;
       display: flex;
       align-items: center;
 
@@ -53,13 +64,13 @@ h1 {
     }
 
     a {
-      position: absolute;
-      color: #fff;
-      text-decoration: none;
-      font-size: 6em;
-      background: rgb(0, 0, 0);
-      width: 80px;
-      padding: 20px;
+      // position: absolute;
+      // color: #fff;
+      // text-decoration: none;
+      // font-size: 6em;
+      // background: rgb(0, 0, 0);
+      // width: 80px;
+      // // padding: 20px;
       text-align: center;
       z-index: 1;
 
@@ -92,18 +103,18 @@ h1 {
 
 }
 
-.arrow__btn {
+.edges {
   z-index: 999;
   display: flex;
   align-items: center;
-  background-color: #000;
+  background-color: $color_top;
 
-    &.arrow_right{
+    &.edge_right{
       justify-content: left;
       padding-left: 20px;
     }
 
-    &.arrow_left{
+    &.edge_left{
       justify-content: right;
       padding-right: 20px;
     }
